two players can be in the same game

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,6 +29,17 @@
           </div>
         </div>
       </section>
+      <section id="board-section" class="hidden">
+        <div class="card">
+          <h2>Partie <span id="game-id"></span></h2>
+          <div>Rôle: <span id="player-role"></span></div>
+          <div id="board-container" style="margin-top:12px;"></div>
+          <div style="margin-top:12px;">
+            <button id="flip-btn">Retourner</button>
+            <button id="back-to-lobby">Retour au lobby</button>
+          </div>
+        </div>
+      </section>
       <!-- waiting room is a separate page: waiting.html -->
     </main>
   </div>
