--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -45,5 +45,6 @@
   </div>
 
   <script src="src/main.js?v=2"></script>
+  <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 </body>
 </html>
