--- a/public/waiting.html
+++ b/public/waiting.html
@@ -11,7 +11,7 @@
     <div>Room: <strong id="roomId">-</strong></div>
     <div>Status: <strong id="status">-</strong></div>
     <div>Joueurs: <strong id="playerCount">0/2</strong></div>
-    <div>Hôte: <strong id="hostLabel">-</strong> <span id="youAreHost" style="display:none;color:green;font-weight:bold;margin-left:8px">(Vous êtes l'hôte)</span></div>
+    <div><span id="youAreHost" style="display:none;font-weight:bold">Vous êtes l'hôte</span></div>
   </div>
   <div style="margin-top:8px">
     <button id="startBtn" style="display:none">Commencer la partie</button>
