--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>ChessNut - Test client</title>
+  <title>ChessNut</title>
   <style>body{font-family:Arial;margin:20px} input,button{padding:6px;margin:4px} #log{white-space:pre-wrap; border:1px solid #ddd;padding:8px;height:300px;overflow:auto}</style>
 </head>
 <body>
-  <h2>ChessNut - Client de test</h2>
+  <h2>ChessNut</h2>
   <div>
-    <button id="create">Créer une room</button>
-    Room ID: <input id="roomId" placeholder="ex: ab12cd34" />
+    <div>
+        <button id="create">Créer une room</button>
+    </div>
     <button id="join">Rejoindre</button>
+    Room ID: <input id="roomId" placeholder="ex: ab12cd34" />
   </div>
-
-  <div style="margin-top:12px">
-    <label>Votre playerId (optionnel): <input id="playerId" placeholder="laisser vide pour générer" /></label>
-  </div>
-
-  <p>Après création ou connexion, vous serez redirigé·e vers la page de <strong>salle d'attente</strong> dédiée.</p>
-
 
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script>
@@ -49,7 +44,8 @@
         return;
       }
 
-      const playerId = document.getElementById('playerId').value.trim() || '';
+      const playerIdEl = document.getElementById('playerId');
+      const playerId = (playerIdEl && playerIdEl.value) ? playerIdEl.value.trim() : '';
       // redirect to waiting page; playerId optional
       const qs = `?roomId=${encodeURIComponent(roomId)}${playerId?`&playerId=${encodeURIComponent(playerId)}`:''}`;
       window.location.href = '/waiting.html' + qs;
